<resources>
    <string name="avatar">Avatar</string>
    <string name="image_content">Image content</string>
    <string name="button_like">Like button</string>
    <string name="button_share">Share button</string>
    <string name="add_post">Add post</string>
    <string name="add_photo">Add photo</string>
    <string name="add_file">Add file</string>
    <string name="add_user">Add user</string>
    <string name="add_location">Add location</string>
    <string name="retry">Retry</string>
    <string name="post_menu_edit">Edit menu</string>
    <string name="edit">Edit</string>
    <string name="user">User</string>
    <string name="app_name">Netology Work</string>
    <string name="post_menu_remove">Remove</string>
    <string name="title_posts"> Posts</string>
    <string name="title_post"> Post</string>
    <string name="new_post"> New post</string>
    <string name="title_events">Events</string>
    <string name="title_event">Event</string>
    <string name="new_event"> New event</string>
    <string name="title_users"> Users</string>
    <string name="button_new_job"> Button new job</string>
    <string name="the_user_is_already_registered">The user is already registered</string>
    <string name="incorrect_photo_format">Incorrect photo format</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="user_unregistered">user_unregistered</string>
    <string name="connection_error">Connection error</string>
    <string name="author_avatar_image">Author avatar image</string>
    <string name="option_menu">Option menu</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="empty_login">Empty login</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="passwords_is_empty">Passwords is empty</string>
    <string name="passwords_dont_match">Passwords dont match</string>
    <string name="name">Name</string>
    <string name="clear">Clear</string>
    <string name="present_time">Present time</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="whats_is_event">Whats is event</string>
    <string name="task_cancelled">Task cancelled</string>
    <string name="attachment_15mb">Attachment 15MB</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="invalid_date_format">Invalid date format</string>
    <string name="whats_news">Whats news</string>
    <string name="speakers">Speakers</string>
    <string name="likers">Likers</string>
    <string name="participants">Participants</string>
    <string name="mentioned">Mentioned</string>
    <string name="don_t_have_an_account_register">Don\'t have an account. Register?</string>
    <string name="in_search_work">In search work</string>
    <string name="wall">wall</string>
    <string name="jobs">jobs</string>
    <string name="new_job">New job</string>
    <string name="position">position</string>
    <string name="link">link</string>
    <string name="date_start">Date start</string>
    <string name="dash">-</string>
    <string name="date_finish">Date finish</string>
    <string name="create">Create</string>
    <string name="empty_field">Empty field</string>
    <string name="enter_dates">Enter dates</string>
    <string name="icon_calendar">Icon calendar</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="end_date">End date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select date</string>
    <string name="register">Register</string>
    <string name="authorization">Authorization</string>
    <string name="registration">Registration</string>
    <string name="log_in">Log in</string>
    <string name="enter">Enter</string>
</resources>