<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.newElement.NewEventFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:background="@color/blue_theme"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/new_post_menu"
        app:navigationIcon="@drawable/ic_arrow_white_24"
        app:title="New event" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <LinearLayout
            android:id="@+id/itemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/whats_is_event"
                android:inputType="textMultiLine"
                tools:text="@tools:sample/lorem[50]" />

            <FrameLayout
                android:id="@+id/imageAttachmentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/imageAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_content"
                    android:visibility="gone"
                    tools:src="@tools:sample/avatars"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/removeImageAttachment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/clear" />

            </FrameLayout>


            <FrameLayout
                android:id="@+id/mapContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <com.yandex.mapkit.mapview.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <Button
                    android:id="@+id/removeLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:text="@string/clear" />

            </FrameLayout>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/addPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/add_photo"
            android:padding="4dp"
            android:src="@drawable/ic_camera_24" />

        <ImageView
            android:id="@+id/addFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add_file"
            android:padding="4dp"
            android:src="@drawable/ic_attach_file_24" />

        <ImageView
            android:id="@+id/addUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add_user"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_people_outline_24" />

        <ImageView
            android:id="@+id/addLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add_location"
            android:padding="4dp"
            android:src="@drawable/ic_location_24" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonSetDate"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/blue_theme"
        android:contentDescription="@string/add_post"
        app:shapeAppearanceOverlay="@style/fab_shape"
        android:src="@drawable/ic_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>