<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.authorization.SignUpFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:background="@color/blue_theme"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_white_24"
        app:title="@string/registration" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pick_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/batton_photo"
                app:civ_border_color="#D0CECE"
                app:civ_border_width="4dp"
                app:civ_circle_background_color="#D0CECE"
                android:backgroundTintMode="screen"
                android:layout_gravity="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:hint="@string/login"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/blue_theme"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue_theme"
                app:hintTextColor="@color/blue_theme"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPassLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/blue_theme"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/blue_theme"
                app:hintTextColor="@color/blue_theme"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatPasswordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/blue_theme"
                android:padding="16dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:theme="@style/Theme.AppCompat"
                app:cornerRadius="16dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>